// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onBackspace does not handle non-zero-offset or non-collapsed selections 1`] = `null`;

exports[`onBackspace does not handle non-zero-offset or non-collapsed selections 2`] = `null`;

exports[`onBackspace removes a preceding atomic block 1`] = `true`;

exports[`onBackspace removes a preceding atomic block 2`] = `false`;

exports[`onBackspace resets the current block type at the start of the first block 1`] = `
Immutable.Record {
  "key": "a",
  "type": "unstyled",
  "text": "Alpha",
  "characterList": Immutable.List [
    Immutable.Record {
      "style": Immutable.OrderedSet [],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [],
      "entity": null,
    },
  ],
  "depth": 0,
  "data": Immutable.Map {},
}
`;

exports[`onBackspace resets the current block type if empty 1`] = `
Immutable.Record {
  "key": "f",
  "type": "unstyled",
  "text": "",
  "characterList": Immutable.List [],
  "depth": 0,
  "data": Immutable.Map {},
}
`;

exports[`onDelete does not handle non-block-end or non-collapsed selections 1`] = `true`;

exports[`onDelete does not handle non-block-end or non-collapsed selections 2`] = `true`;

exports[`onDelete removes a following atomic block 1`] = `false`;

exports[`onDelete removes a following atomic block 2`] = `true`;

exports[`tryToRemoveBlockStyleonDelete breaks out of code block on enter two blank lines 1`] = `
Immutable.Record {
  "key": "f",
  "type": "blockquote",
  "text": "Charlie",
  "characterList": Immutable.List [
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
    Immutable.Record {
      "style": Immutable.OrderedSet [
        "ITALIC",
      ],
      "entity": null,
    },
  ],
  "depth": 0,
  "data": Immutable.Map {},
}
`;
